--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>HTML basics</title>
+        <script>
+            alert("Hello World")
+        </script>
     </head>
     <body>
 
