--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>HTML basics</title>
-        <script>
-            alert("Hello World")
-        </script>
-    </head>
-    <body>
+<body>
 
+<p>Click the button to display an alert box.</p>
 
-    </body>
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+  alert("Hello! I am an alert box!");
+}
+</script>
+
+</body>
 </html>
