--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ color:red; }
 <body>
 
 <p>Click the button to display an alert box.</p>
+  <p style="color:blue;">You can change the text color of a whole sentence or paragraph...</p>
+<p>...or you can change the text color of one <span style="color:green;">word</span> or even a single l<span style="color:red;">e</span>tter.</p>
 
 <button onclick="myFunction()">Try it</button>
 
