--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ color:red; }
   </head>
 <body>
 
-<p>Click the button to display an alert box.</p>
+<p style="background-color:#1c87c9;">Click the button to display an alert box.</p>
+  
+  
   <p style="color:blue;">You can change the text color of a whole sentence or paragraph...</p>
 <p>...or you can change the text color of one <span style="color:green;">word</span> or even a single l<span style="color:red;">e</span>tter.</p>
 
