--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ color:red; }
   <head>
     Hello
   </head>
-<body>
+<body style="background-color:#1c87c9;>
 
-<p style="background-color:#1c87c9;">
+<p ">
   Click the button to display an alert box.
 </p>
   
