--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@ function myFunction() {
   alert("Hello! I am an alert box!");
 }
 </script>
-
+<img src="Making.jpg" alt="Girl in a jacket" width="500" height="600">
 </body>
 </html>
