--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ color:red; }
   ...or you can change the text color of one <span style="color:green;">word</span> or even a single l<span style="color:red;">e</span>tter
 </p>
 
+  
+<p>
+  ...or you can connect to another page <a href="Other Page".html">OTHER PAGE </a>
+</p>
+  
+  
+  
 <button onclick="myFunction()">Try it</button>
 
 <script>
