--- a/index.html
+++ b/index.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
-<style type="text/css"> body {
-color:red; }
-</style>
+
+
+
 <html>
+  
+  
   <head>
-    Hello
+    Melanie's Home Page
   </head>
-<body style="background-color:#1c87c9;>
+  
+  
+  
+  <body style="background-color:#1c87c9;>
 
-<p ">
-  Click the button to display an alert box.
-</p>
+  <p ">
+     Click the button to display an alert box.
+  </p>
   
   
-<p style="color:blue;">
-  You can change the text color of a whole sentence or paragraph...
-</p>
+  <p>
+    <button onclick="myFunction()">Try it</button>
+
+    <script>
+      function myFunction() {
+          alert("Hello! I am an alert box!");
+       }
+    </script>
+  </p>
   
-<p>
-  ...or you can change the text color of one <span style="color:green;">word</span> or even a single l<span style="color:red;">e</span>tter
-</p>
+
+
 
   
-<p>
-  ...or you can connect to another page <a href="OtherPage".html">OTHER PAGE </a>
-</p>
+  <p>
+      ...or you can connect to another page <a href="OtherPage".html">OTHER PAGE </a>
+  </p>
   
   
   
-<button onclick="myFunction()">Try it</button>
-
-<script>
-function myFunction() {
-  alert("Hello! I am an alert box!");
-}
-</script>
-<p>
+  <p>
     <img src="Making.jpeg" alt="Making and Fixing" width="500" height="600">
-</p>
+  </p>
+        
+        
 </body>
 </html>
