--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   
   <body style="background-color:#1c87c9;>
 
-  <p ">
+  <p>
+    follow the soundcloud homie <a href=“www.soundcloud.com/slumpeddd”>follow the soundcloud:)</a>
+  </p>
+
+  <p>
      Click the button to display an alert box.
   </p>
   
