--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body style="background-color:#1c87c9;>
 
   <p>
-    follow the soundcloud homie <a href=“www.soundcloud.com/slumpeddd”>follow the soundcloud:)</a>
+    follow the soundcloud homie <a href="https://soundcloud.com/slumpeddd">SOUNDCLOUD of Jack</a>
   </p>
 
   <p>
