--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
   
   
   <head>
-    Melanie's Home Page
+    Melanie's Landing Page
   </head>
   
   
   
   <body style="background-color:#1c87c9;>
 
-  <p>
-    follow the soundcloud homie <a href="https://www.soundcloud.com/slumpeddd">SOUNDCLOUD of Jack</a>
-  </p>
 
   <p>
      Click the button to display an alert box.
@@ -27,7 +24,7 @@
 
     <script>
       function myFunction() {
-          alert("Hello! I am an alert box!");
+          alert("HI! Hope you like what you see.");
        }
     </script>
   </p>
@@ -37,7 +34,7 @@
 
   
   <p>
-      ...or you can connect to another page <a href="OtherPage".html">OTHER PAGE </a>
+      ... observasions on skateboarding <a href="OtherPage".html">here</a>
   </p>
   
   
