--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   
   
   <head>
-    Melanie's Landing Page
+    melanie's landing page
   </head>
   
   
   
-  <body style="background-color:#1c87c9;>
+  <body style="background-color:#808080;>
 
 
   <p>
-     Click the button to display an alert box.
+     pop
   </p>
   
   
