--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   
   <head>
     melanie's landing page
+    <style>
+     body {background-color: #808080;;}
+     h1   {color: blue;}
+     p    {color: black;}
+    </style>
   </head>
   
   
