--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
      body {background-color: #808080;;}
      h1   {color: blue;}
-     p    {color: black;}
+     p    {color: red;}
     </style>
   </head>
   
