--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <head>
     melanie's landing page
     <style>
-     body {background-color: #808080;;}
-     h1   {color: blue;}
-     p    {color: red;}
+     body {background-color: #808080;}
+     h1   {
+          color: blue;
+     }
+     p    {
+          font-family: courier;
+          color: black;
+          font-size:30px;
+     }
     </style>
   </head>
   
