--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 
-
-
 <html>
-  
   
   <head>
     melanie's landing page
     <style>
      body {background-color: #808080;}
      h1   {
+          font-family: courier;
+          font-size:30px;
           color: blue;
      }
      p    {
@@ -22,16 +21,14 @@
   
   
   
-  <body style="background-color:#808080;>
-
+  <body>
 
   <p>
      pop
   </p>
   
-  
   <p>
-    <button onclick="myFunction()">Try it</button>
+    <button onclick="myFunction()">CLICK</button>
 
     <script>
       function myFunction() {
@@ -40,15 +37,9 @@
     </script>
   </p>
   
-
-
-
-  
   <p>
       ... observasions on skateboarding <a href="OtherPage".html">here</a>
   </p>
-  
-  
   
   <p>
     <img src="Making.jpeg" alt="Making and Fixing" width="500" height="600">
