--- a/OtherPage.html
+++ b/OtherPage.html
@@ -1,12 +1,12 @@
 
 <p>
-  ... two skateboarders skateboarding
+  ... two skateboarders skateboarding - take note of the accuracy when performing a trick:
 </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/R26jAuu1b3E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 
 <p>
-  ... a film director talking about skateboarding
+  ... a film director talking about skateboarding - take note from one minute into the video when they talk about practice:
 </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EQLInlnfWUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
