Add paragraph about comms and nets
Added a new paragraph about comms and nets with a link.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
   <p>
       ... observasions on skateboarding <a href="OtherPage".html">here</a>
   </p>
-  
+
+  <p>
+      ... comms and nets <a href="comms-and-nets.html">here</a>
+  </p>
+
+    
   <p>
     <img src="Making.jpeg" alt="Making and Fixing" width="500" height="600">
   </p>
